package com.designpattern.structural.bridge.impls;

/**
 * @Auther: ZhengHuaJing
 * @Date: 2020/10/13 20:01
 * @Description:
 */
public interface DrawAPI {
    void drawCircle(int radius, int x, int y);
}
